examples/tests/snapshots/20_overworld__headless_snapshot.snap
---
source: examples/tests/20_overworld.rs
expression: "support::headless_snapshot::<Overworld>(1)"
---
·(365,·86)··Stonemere·(City)··--·arrows·pan,·T·vie
▲▲▲▲▲▲▲▲▲▲▲▲""""","·",""""",,,,""",...≈~~≈≈≈~~≈~~~
"""∩"▲▲▲▲▲▲▲∩∩,,",,"·",",,""","",,,.≈≈≈≈~~~~~~~≈≈≈
"∩∩"""▲▲▲▲▲""",,,,""·,",,"*,,"",",.≈≈≈≈≈≈~≈≈≈~≈≈..
""∩"∩∩∩▲▲∩∩"",",",",·",".*,""",*,.≈≈≈≈~≈≈≈~≈~≈≈:,"
∩"∩""""∩∩∩""∩,"",".,,·"",",,"",,:≈~~≈~~≈~~~~≈~:",,
""""∩"""""∩"*",,,"",",·,",""",,".≈~≈≈≈~~≈≈~~~.,",,
"""∩""∩∩"","",,.",,,,,,·,"""""".≈~≈≈≈≈~≈≈~~≈:""".,
▲▲"∩"""∩∩"♠,,"""",,,"""·,"","".≈≈≈≈≈≈≈~~~~≈≈.,,",,
▲▲▲∩"∩""""♣♠♠♣♣♣,,"",,"·""".,".≈≈≈~~~~~~~≈≈..,,,."
▲▲▲▲"""∩∩∩"♠♣♣♣♠♣♣"".""·",,"".≈≈≈≈~~~~~~~.,,,""Φ,"
▲▲▲▲∩""∩"∩♠♠♠♠♣♣♠♠",,,.·,,,,,.~~≈~≈~≈~≈≈."",","","
▲▲▲∩∩∩"∩""∩♠♠♠♣♠♣♣",,",·",,",≈~~≈≈≈≈≈~~:,,""".*","
∩∩∩∩∩∩"""""♣♣♠♠♠♣♣♣*,,"·,■"".≈≈~≈≈≈≈~..",,,,,,","·
∩∩"""∩"∩∩∩""♠♣♣♣♣♠♣","·".··".≈≈~≈~≈≈..",.,""""""·"
∩♠∩"∩""∩"∩"∩♣♠♣♣♠♠♠♠,·,*·,,·.~~≈~≈..*,.",,".",,·""
♣♠♣♠♣♠♠,*""""♠♣♠♠♣♣♠·,*,·","·≈≈≈...",",",""",.""·,
♠♣♣♣♣♠♠,""∩""∩"♣♠♠♠♠·","·,,..·..",,,,.",,,","",",·
♣♣♠♠♣♠"∩""∩∩""""♣♠♣"·,","·":..·,".",""",,*,,,,,,"·
♣♣♠♠♠∩∩∩∩"∩∩"∩∩"♠""·,,"",·,.:..·,,,,",,"..,,,.,,",
♠♠♠♣∩"∩"""""""∩,",,"·,.",·",...,·",,.,"""","".,,,·
♣♠♠♠∩∩""""∩"""∩"""""·",,"·,*..,,"·,",,,.,,",""",·,
♣♣♣♠"""∩""""""",,,,·"."""·"""""","·,,,,,*"",,·,⌂,,
♣♠♠♣♣""∩∩""∩""∩","·",,"""·.,,,,"",,·,,,"",",·,·"",
♠♣♠♣♠"""∩"∩"∩"",",·,""""·,,,",,,,,",·,,"",,·,,",""
