examples/tests/snapshots/20_overworld__narrow_layout_snapshot.snap
---
source: examples/tests/20_overworld.rs
expression: view
---
·(365,·86)··Stonemere·(City)··--·arrows·pan,·T·vie
""∩"∩∩∩▲▲∩∩"",",",",·",".*,""",*,.≈≈≈≈~≈≈≈~≈~≈≈:,"
∩"∩""""∩∩∩""∩,"",".,,·"",",,"",,:≈~~≈~~≈~~~~≈~:",,
""""∩"""""∩"*",,,"",",·,",""",,".≈~≈≈≈~~≈≈~~~.,",,
"""∩""∩∩"","",,.",,,,,,·,"""""".≈~≈≈≈≈~≈≈~~≈:""".,
▲▲"∩"""∩∩"♠,,"""",,,"""·,"","".≈≈≈≈≈≈≈~~~~≈≈.,,",,
▲▲▲∩"∩""""♣♠♠♣♣♣,,"",,"·""".,".≈≈≈~~~~~~~≈≈..,,,."
▲▲▲▲"""∩∩∩"♠♣♣♣♠♣♣"".""·",,"".≈≈≈≈~~~~~~~.,,,""Φ,"
▲▲▲▲∩""∩"∩♠♠♠♠♣♣♠♠",,,.·,,,,,.~~≈~≈~≈~≈≈."",","","
▲▲▲∩∩∩"∩""∩♠♠♠♣♠♣♣",,",·",,",≈~~≈≈≈≈≈~~:,,""".*","
∩∩∩∩∩∩"""""♣♣♠♠♠♣♣♣*,,"·,■"".≈≈~≈≈≈≈~..",,,,,,","·
∩∩"""∩"∩∩∩""♠♣♣♣♣♠♣","·".··".≈≈~≈~≈≈..",.,""""""·"
∩♠∩"∩""∩"∩"∩♣♠♣♣♠♠♠♠,·,*·,,·.~~≈~≈..*,.",,".",,·""
♣♠♣♠♣♠♠,*""""♠♣♠♠♣♣♠·,*,·","·≈≈≈...",",",""",.""·,
♠♣♣♣♣♠♠,""∩""∩"♣♠♠♠♠·","·,,..·..",,,,.",,,","",",·
♣♣♠♠♣♠"∩""∩∩""""♣♠♣"·,","·":..·,".",""",,*,,,,,,"·
♣♣♠♠♠∩∩∩∩"∩∩"∩∩"♠""·,,"",·,.:..·,,,,",,"..,,,.,,",
♠♠♠♣∩"∩"""""""∩,",,"·,.",·",...,·",,.,"""","".,,,·
♣♠♠♠∩∩""""∩"""∩"""""·",,"·,*..,,"·,",,,.,,",""",·,
♣♣♣♠"""∩""""""",,,,·"."""·"""""","·,,,,,*"",,·,⌂,,
