examples/tests/snapshots/20_overworld__png_snapshot.snap
---
source: examples/tests/20_overworld.rs
expression: png
extension: png
snapshot_kind: binary
---
