examples/tests/snapshots/20_overworld__wide_layout_snapshot.snap
---
source: examples/tests/20_overworld.rs
expression: view
---
▲▲▲▲▲∩""""""""""""∩"∩▲∩""",.·,"""""""∩∩"∩".,,,,,",",,...~≈≈~~~~≈:...≈≈┌───────··OVERWORLD··────────┐
▲▲▲▲▲▲""∩▲▲▲▲∩∩∩"""∩"▲∩""".,·,,,,,,"",",",,",,,,,"":...~~~~~≈~~≈..",.~│seed·2··(365,·86)···········│
▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲∩""","·,,,",.",",,,,,".,,",:≈~≈~≈~~≈≈≈≈≈≈..*,.≈│The·Misty·Lowlands··········│
▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲∩",,""·,",","""""","""","..≈~≈≈≈≈~≈~~≈≈≈~.*",.≈│Stonemere·(City)············│
▲▲▲""▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲""""","·",""""",,,,""",...≈~~≈≈≈~~≈~~~~≈..."*,.≈│elevation·~43%··············│
∩∩""∩"▲▲▲""""∩"▲▲▲▲▲▲▲∩∩,,",,"·",",,""","",,,.≈≈≈≈~~~~~~~≈≈≈.:.",⌂","≈│view:·terrain·[T]···········│
"∩"""∩""∩""∩∩"""▲▲▲▲▲""",,,,""·,",,"*,,"",",.≈≈≈≈≈≈~≈≈≈~≈≈..,"",·"·""≈│····························│
"""""""∩"∩""∩"∩∩∩▲▲∩∩"",",",",·",".*,""",*,.≈≈≈≈~≈≈≈~≈~≈≈:,"","·,,·,,≈│·▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀│
""""∩"""""∩"∩""""∩∩∩""∩,"",".,,·"",",,"",,:≈~~≈~~≈~~~~≈~:",,""·,,·",..│·▀▀·▀··▀▀▀·▀··▀▀·▀▀▀▀▀······│
"∩"""∩∩∩""""""∩"""""∩"*",,,"",",·,",""",,".≈~≈≈≈~~≈≈~~~.,",,,,"·,·,,".│·▀·▀▀▀·▀▀··▀▀▀·▀▀▀▀·▀▀▀▀▀·▀▀│
"""∩"""∩"∩"""∩""∩∩"","",,.",,,,,,·,"""""".≈~≈≈≈≈~≈≈~~≈:""".,,""·,·.",.│·▀▀▀▀▀▀▀▀▀·▀··▀▀▀···▀▀+───+▀│
∩""""∩"∩▲▲▲▲"∩"""∩∩"♠,,"""",,,"""·,"","".≈≈≈≈≈≈≈~~~~≈≈.,,",,,"·".·""":│·▀▀··▀▀▀▀·▀▀▀▀▀▀·▀·▀··+───+▀│
∩"∩∩"""▲▲▲▲▲▲∩"∩""""♣♠♠♣♣♣,,"",,"·""".,".≈≈≈~~~~~~~≈≈..,,,."",·"""·",,│·▀·▀▀▀▀▀▀▀▀·▀▀▀▀▀▀▀···▀▀▀▀▀▀│
""∩∩""∩▲▲▲▲▲▲▲"""∩∩∩"♠♣♣♣♠♣♣"".""·",,"".≈≈≈≈~~~~~~~.,,,""Φ,""·,,,,"·,,│·▀▀▀▀▀▀▀▀··▀·▀▀▀··▀▀·▀▀·▀▀▀▀│
"""∩""∩▲▲▲▲▲▲▲∩""∩"∩♠♠♠♠♣♣♠♠",,,.·,,,,,.~~≈~≈~≈~≈≈."",","",",·"",",·,"│·▀▀▀▀·▀▀▀·▀▀▀▀▀▀▀▀··▀▀▀·▀▀▀▀│
"∩∩"""∩"▲▲▲▲▲∩∩∩"∩""∩♠♠♠♣♠♣♣",,",·",,",≈~~≈≈≈≈≈~~:,,""".*","·,,",",,⌂"│·▀▀▀▀·▀▀▀▀▀··▀▀▀▀▀·▀▀▀▀▀·▀▀▀│
"""∩"∩""""∩∩∩∩∩∩"""""♣♣♠♠♠♣♣♣*,,"·,■"".≈≈~≈≈≈≈~..",,,,,,","·,".,,""".,│·▀···▀▀▀··▀··▀▀▀▀▀▀▀▀·▀▀▀▀▀▀│
∩""∩"∩""""∩∩"""∩"∩∩∩""♠♣♣♣♣♠♣","·".··".≈≈~≈~≈≈..",.,""""""·",",,,,"*"*│·▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀│
♠"""""♣♠♣♣∩♠∩"∩""∩"∩"∩♣♠♣♣♠♠♠♠,·,*·,,·.~~≈~≈..*,.",,".",,·"""",,,"""",│····························│
♣♣♠♣♠♣♣♣♠♣♣♠♣♠♣♠♠,*""""♠♣♠♠♣♣♠·,*,·","·≈≈≈...",",",""",.""·,"..,,""","│Legend······················│
♣♠♣♣♠♠♣♣♠♠♠♣♣♣♣♠♠,""∩""∩"♣♠♠♠♠·","·,,..·..",,,,.",,,","",",·,"",,,"","│≈·Deep·ocean················│
♣♣♣♠♣♣♠♣♣♣♣♣♠♠♣♠"∩""∩∩""""♣♠♣"·,","·":..·,".",""",,*,,,,,,"·,",,"",""*│~·River·····················│
♠♣♠♣♠♠♠♠♣♣♣♣♠♠♠∩∩∩∩"∩∩"∩∩"♠""·,,"",·,.:..·,,,,",,"..,,,.,,",·,,,,,,"",│,·Plains····················│
♣♠♠♣♠♠♠♠♠♠♠♠♠♣∩"∩"""""""∩,",,"·,.",·",...,·",,.,"""","".,,,·",,,",",,,│♣·Forest····················│
♠♠♠♣♣♣♣♠♣♠♣♠♠♠∩∩""""∩"""∩"""""·",,"·,*..,,"·,",,,.,,",""",·,,",,"",",,│"·Hills·····················│
♣♣♣♠♠♣♣♣♣♣♣♣♣♠"""∩""""""",,,,·"."""·"""""","·,,,,,*"",,·,⌂,,","""",,",│▲·Mountains·················│
♠♣♠♣♣♣♠♠♣♠♣♠♠♣♣""∩∩""∩""∩","·",,"""·.,,,,"",,·,,,"",",·,·"","",*,,,"",│▲·Snowcap···················│
♣♠♠♠♣♠♠♠♠♠♠♣♠♣♠"""∩"∩"∩"",",·,""""·,,,",,,,,",·,,"",,·,,",""",""",,"".│.·Desert····················│
♠♠♠♠♠♠♠♠♠♣♠♣♣♣♣"∩∩∩"""∩""",,,·.,"·""",",,""","*·"","·"""",".",,",,","≈│,·Savanna···················│
♠♣♣♣♣♣♠♣♠♣♠♠♠♠"∩""∩""""∩,,,,"·."·",",,"",,","","·""·,∩,..,,,","""."""≈│····························│
♠♣♣♣♠♠♠♣♠♣♠♣♣∩∩"∩"∩""∩""♣,,,,·,·,",,,",,,,",,",""··""∩,,",,,",,"","":≈│drag·pans,·T·tiles,·R·reroll│
♠♠♠♣♠♣♠♣♠♣♠♠♠∩"""∩∩∩"∩∩",".,.··"",,,""",,,,,""".""",∩",.,"""",,,,,,"≈~└────────────────────────────┘
